--- a/src/styles/helpers/utils.scss
+++ b/src/styles/helpers/utils.scss
@@ -50,3 +50,7 @@
 .height-auto {
   height: auto !important;
 }
+
+.blend-mode {
+  mix-blend-mode: exclusion;
+}
